Added flag to control url use from agent-card

--- a/examples/a2a_proxy_example.yaml
+++ b/examples/a2a_proxy_example.yaml
@@ -58,3 +58,5 @@ apps:
         #     type: "static_bearer"
         #     token: "${SECURE_AGENT_TOKEN}"
         #   request_timeout_seconds: 180
+        #   # use_agent_card_url: false  # If true (default), uses URL from agent card for tasks.
+        #                                # If false, uses configured URL directly for all calls.
