chore: update logger name

--- a/templates/logging_config_template.yaml
+++ b/templates/logging_config_template.yaml
@@ -25,7 +25,7 @@ handlers:
 
 loggers:
   solace_ai_connector:
-    level: ${LOGGING_SOLACE_AI_CONNECTOR_LEVEL, INFO}
+    level: ${LOGGING_SAC_LEVEL, INFO}
     handlers: []
 
   solace_agent_mesh:
