--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,7 @@ jobs:
   build_and_push_docker:
     name: Build and Push to DockerHub
     needs: release
-    uses: ./.github/workflows/build-push-dockerhub.yml
+    uses: SolaceLabs/solace-agent-mesh/.github/workflows/build-push-dockerhub.yml@push-docker
     with:
       version: ${{ needs.release.outputs.new_version }}
       commit_hash: ${{ needs.release.outputs.commit_hash }}
