--- a/examples/agents/remote-mcp/mcp_cloudflare.yaml
+++ b/examples/agents/remote-mcp/mcp_cloudflare.yaml
@@ -25,6 +25,7 @@ apps:
       model: *general_model
       instruction: |
         An agent that handles cloudflare operations.
+        Do NOT use parallel tool calls.
       
       # --- Tools Definition (including MCP) ---
       tools:
@@ -337,8 +338,6 @@ apps:
         type: "filesystem"
         base_path: "/tmp/samv2"
         artifact_scope: namespace
-      credential_service:
-        type: "memory"
       enable_embed_resolution: true
       enable_artifact_content_instruction: true
       trust_manager:
