--- a/examples/agents/remote-mcp/mcp_stripe.yaml
+++ b/examples/agents/remote-mcp/mcp_stripe.yaml
@@ -26,6 +26,7 @@ apps:
       instruction: |
         An agent that handles stripe operations. Use the tools to interact with stripe. Don't make up information.
         If you don't know the answer, just say that you don't know. Do not try to make up an answer.
+        Do NOT use parallel tool calls.
       
       # --- Tools Definition (including MCP) ---
       tools:
@@ -905,8 +906,6 @@ apps:
         type: "filesystem"
         base_path: "/tmp/samv2"
         artifact_scope: namespace
-      credential_service:
-        type: "memory"
       enable_embed_resolution: true
       enable_artifact_content_instruction: true
       trust_manager:
