--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,8 @@ dependencies = [
     "GitPython==3.1.45",
     "Flask==3.0.3",
     "flask-cors==6.0.1",
-    "fastapi==0.117.1",
+    "fastapi==0.120.1",
+    "starlette==0.49.1",
     "uvicorn[standard]==0.37.0",
     "sse-starlette==3.0.2",
     "itsdangerous==2.2.0",
