--- a/tests/integration/scenarios_declarative/test_data/projects/test_unauthorized_update.yaml
+++ b/tests/integration/scenarios_declarative/test_data/projects/test_unauthorized_update.yaml
@@ -22,4 +22,4 @@ expected_http_responses:
         description: "Hacked Description"
     expected_status_code: 404
     text_contains:
-      - "Resource not found"
+      - "Project not found"
